multilang-schema-registry/shared/test/avro/negative/full/account_v1.avsc
{
  "type": "record",
  "name": "Account",
  "namespace": "com.amazonaws.services.schemaregistry.test.full.negative",
  "doc": "Base schema for FULL compatibility violation testing (COMPAT-040, COMPAT-043)",
  "fields": [
    {
      "name": "accountId",
      "type": "string",
      "doc": "Account identifier"
    },
    {
      "name": "balance",
      "type": "double",
      "doc": "Account balance"
    },
    {
      "name": "status",
      "type": {
        "type": "enum",
        "name": "AccountStatus",
        "symbols": ["ACTIVE", "INACTIVE", "SUSPENDED"]
      },
      "doc": "Account status"
    },
    {
      "name": "metadata",
      "type": ["null", {
        "type": "map",
        "values": "string"
      }],
      "default": null,
      "doc": "Optional metadata"
    }
  ]
}
